# easy-fp

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
appendix/faq/: index.html
appendix/glossary/: index.html
appendix/libraries/: index.html
appendix/references/: index.html
appendix/typescript-types/: index.html
chapter01/: index.html
chapter02/: index.html
chapter03/: index.html
chapter04/: index.html
chapter05/: index.html
chapter06/: index.html
chapter07/: index.html
chapter08/: index.html
chapter09/: index.html
docs/: index.md
docs/appendix/: faq.md  glossary.md  libraries.md  references.md  typescript-types.md
docs/chapter01/: index.md
docs/chapter02/: index.md
docs/chapter03/: index.md
docs/chapter04/: index.md
docs/chapter05/: index.md
docs/chapter06/: index.md
docs/chapter07/: index.md
docs/chapter08/: index.md
docs/chapter09/: index.md
examples/: .eslintrc.json  jest.config.js  package.json  tsconfig.json
examples/src/: index.ts
examples/src/chapter01/: basics.test.ts  basics.ts
examples/src/chapter02/: pure-functions.ts
search/: search_index.json
