[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "easy-fp"
version = "0.1.0"
description = "TypeScriptで関数型プログラミングをやさしく学ぶ教材"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Kota Mizushima", email = "kmizu.main@gmail.com"}
]
keywords = ["functional-programming", "typescript", "tutorial", "mkdocs"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]

[project.urls]
Homepage = "https://github.com/kmizu/easy-fp"
Documentation = "https://kmizu.github.io/easy-fp"
Repository = "https://github.com/kmizu/easy-fp"
